# DualProcRpc

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  SPECIFICATION.md  项目需求说明书.md
.claude/: settings.local.json
ProgramA/: HttpClient.cpp  HttpClient.h  MainWindow.cpp  MainWindow.h  WebSocketClient.cpp  WebSocketClient.h  main.cpp
ProgramB/: BusinessFunctions.cpp  BusinessFunctions.h  FunctionRegistry.cpp  FunctionRegistry.h  HttpServer.cpp  HttpServer.h  MainWindow.cpp  MainWindow.h  WebSocketServer.cpp  WebSocketServer.h  main.cpp
shared/: Protocol.cpp  Protocol.h
